If the SigG NullPIN is still active, then trying to set the SigG PIN fails.
This happens because SCD PASSWD is called without the --nullpin option.
If the SigG NullPIN is still active, then trying to set the SigG PIN fails.
This happens because SCD PASSWD is called without the --nullpin option.
| rKLEOPATRA Kleopatra | |||
| rKLEOPATRAf5d3e32497de Fix setting initial SigG PIN | |||