Fix setting initial SigG PIN

Note: Setting the initial NKS PIN would also fail, but as long as the
NKS NullPIN is active a different code path is used.

GnuPG-bug-id: 5220