src/commands/changepincommand.h
@@ -27,7 +27,8 @@ class ChangePinCommand : public CardCommand
 public:
     enum ChangePinMode {
         NormalMode = 0,
-        ResetMode = 1
+        ResetMode = 1,
+        NullPinMode = 2
     };
 
     explicit ChangePinCommand(const std::string &serialNumber, const std::string &appName, QWidget *parent);
